[project]
name = "prompt-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "ipykernel>=6.29.5",
    "openai>=1.57.4",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
